--- a/myproject/myapp/templates/pages/crud.html
+++ b/myproject/myapp/templates/pages/crud.html
@@ -3,33 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% load static %}
+    <title>CRUDs</title>
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/crud.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    
 </head>
-<body>
-    <form method="POST" action="/usr">
-        {% csrf_token %}
-        <div>
-            <br>
-            <p>
-                <h3>Enter Details</h3>
-            </p>
-            <div>
-                <p>User ID:</p>{{ form.uid }}
-            </div>
-            <div>
-                <p>User Name:</p>{{ form.uname }}
-            </div>
-            <div>
-                <p>User Email:</p>{{ form.email }}
-            </div>
-            <div>
-                <p>User Contact:</p>{{ form.ucontact }}
-            </div>
+<body class="body-main">
+    <div class="navbar-main">
+        <div class="logo"><a href="{% url 'index' %}" class="index-link"><img src="../../static/assets/logoBlancoNegro.png" alt="logo"
+                    height="60px">BWE</a></div>
+        <div class="acnt">
+            <div class="item inic"><a href="{% url 'login' %}" class="index-link ses">Iniciar Sesión</a></div>
+            <div class="item crea"><a href="{% url 'register' %}" class="index-link ses">Crear cuenta</a></div>
+        </div>
+    </div>
+
+    <div class="bottom-bar">
+        <div><a href="{% url 'index' %}"><img src="../../static/assets/casa.png" alt="" width="30px"></a></div>
+        <div><a href="{% url 'explorer' %}"><img src="../../static/assets/explorador.png" alt="" width="30px"></a></div>
+        <div><a href="{% url 'shoppingcart' %}"><img src="../../static/assets/carro-de-la-carretilla.png" alt="" width="30px"></a></div>
+    </div>
+
+    <div class="container">
+        <form method="POST" action="/usr">
+            {% csrf_token %}
             <div>
                 <br>
-                <button type="submit">Submit</button>
+                <p>
+                    <h3>Enter Details</h3>
+                </p>
+                <div>
+                    <p>User ID:</p>{{ form.uid }}
+                </div>
+                <div>
+                    <p>User Name:</p>{{ form.uname }}
+                </div>
+                <div>
+                    <p>User Email:</p>{{ form.email }}
+                </div>
+                <div>
+                    <p>User Contact:</p>{{ form.ucontact }}
+                </div>
+                <div>
+                    <br>
+                    <button type="submit">Submit</button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+    
 </body>
 </html>
