--- a/myproject/myapp/templates/pages/show.html
+++ b/myproject/myapp/templates/pages/show.html
@@ -4,35 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Records</title>
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/show.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    
 </head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>User ID</th>
-                <th>User Name</th>
-                <th>User Email</th>
-                <th>User Contact</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
-            <tr>
-                <td>{{user.uid}}</td>
-                <td>{{user.uname}}</td>
-                <td>{{user.email}}</td>
-                <td>{{user.ucontact}}</td>
-                <td>
-                    <a href="/edit/{{user.uid}}">Edit</a>
-                    <a href="/delete/{{user.uid}}">Delete</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <br>
-    <br>
-    <button><a href="/usr">Add New Record</a></button>
+<body class="body-main">
+    <div class="navbar-main">
+        <div class="logo"><a href="{% url 'index' %}" class="index-link"><img src="../../static/assets/logoBlancoNegro.png" alt="logo"
+                    height="60px">BWE</a></div>
+        <div class="acnt">
+            <div class="item inic"><a href="{% url 'login' %}" class="index-link ses">Iniciar Sesión</a></div>
+            <div class="item crea"><a href="{% url 'register' %}" class="index-link ses">Crear cuenta</a></div>
+        </div>
+    </div>
+
+    <div class="bottom-bar">
+        <div><a href="{% url 'index' %}"><img src="../../static/assets/casa.png" alt="" width="30px"></a></div>
+        <div><a href="{% url 'explorer' %}"><img src="../../static/assets/explorador.png" alt="" width="30px"></a></div>
+        <div><a href="{% url 'shoppingcart' %}"><img src="../../static/assets/carro-de-la-carretilla.png" alt="" width="30px"></a></div>
+    </div>
+
+    <div class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th>User ID</th>
+                    <th>User Name</th>
+                    <th>User Email</th>
+                    <th>User Contact</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                <tr>
+                    <td>{{user.uid}}</td>
+                    <td>{{user.uname}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.ucontact}}</td>
+                    <td>
+                        <a href="/edit/{{user.uid}}">Edit</a>
+                        <a href="/delete/{{user.uid}}">Delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <br>
+        <br>
+        <button><a href="/usr">Add New Record</a></button>
+    </div>
+    
 </body>
 </html>
